ej5: add new changes mainly on golang side

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -19,6 +19,11 @@ services:
       - ./client/config.yaml:/config.yaml
     environment:
       - CLI_ID=1
+      - CLI_NOMBRE=Cliente1
+      - CLI_APELLIDO=surname
+      - CLI_DOCUMENTO=30904465
+      - CLI_NACIMIENTO=1990-01-01
+      - CLI_NUMERO=7574
     networks:
       - testing_net
     depends_on:
