--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -17,13 +17,9 @@ services:
     entrypoint: /client
     volumes:
       - ./client/config.yaml:/config.yaml
+      - ./.data/agency-1.csv:/agency-1.csv
     environment:
       - CLI_ID=1
-      - CLI_NOMBRE=Cliente1
-      - CLI_APELLIDO=surname
-      - CLI_DOCUMENTO=30904465
-      - CLI_NACIMIENTO=1990-01-01
-      - CLI_NUMERO=7574
     networks:
       - testing_net
     depends_on:
